ecmascript/parser/tests/typescript-errors/tsc/types/objectTypeLiteral/callSignatures/restParametersOfNonArrayTypes/input.ts.stderr
error: Rest element must be final element
 --> $DIR/tests/typescript-errors/tsc/types/objectTypeLiteral/callSignatures/restParametersOfNonArrayTypes/input.ts:5:11
  |
5 | var f2 = (...x: Date, ...y: boolean) => { }
  |           ^^^

